# pubmed-ml-platform

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  DEVLOG.md  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  fly.toml  pyproject.toml  render.yaml  requirements-render.txt
.github/workflows/: ci.yml  eval-gate.yml
dags/: pubmed_ingest.py
db/: init.sql
docker/: airflow.Dockerfile
docs/: portfolio-dossier.md  pubmed-platform-diagrams.md
k8s/: api.yaml  mlflow.yaml  namespace.yaml  postgres.yaml
loadtest/: locustfile.py
monitoring/: alerts.yml  prometheus.yml
monitoring/grafana/dashboards/: pubmed-api.json
src/embeddings/: compare_ft.py  cross_encoder.py  distill.py  embed_pipeline.py  evaluate.py  finetune.py  onnx_export.py  reembed_ft.py  registry.py  train_from_scratch.py
src/ingestion/: pubmed_client.py
src/mcp/: server.py
src/serving/: api.py  onnx_embedder.py
tests/: test_api.py  test_embed_pipeline.py  test_evaluate.py  test_mcp_server.py  test_pubmed_client.py  test_registry.py
