[project]
name = "pubmed-ml-platform"
version = "0.1.0"
description = "End-to-end ML platform for semantic search over PubMed biomedical abstracts"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "requests>=2.31",
    "psycopg2-binary>=2.9",
    "sentence-transformers>=3.0",
    "torch>=2.2",
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
airflow = [
    "apache-airflow>=2.10",
    "apache-airflow-providers-postgres>=5.0",
]
mlflow = [
    "mlflow>=2.17",
]
mcp = [
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
all = [
    "pubmed-ml-platform[mlflow,mcp,dev]",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
