[project]
name = "pubmed-ml-platform"
version = "0.1.0"
description = "End-to-end ML platform for semantic search over PubMed biomedical abstracts"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "requests>=2.31",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",  # sync DB access for training/embedding scripts; the API uses asyncpg
    "sentence-transformers>=3.0",
    "torch>=2.2",
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
    "httpx>=0.27",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
airflow = [
    "apache-airflow>=2.10",
    "apache-airflow-providers-postgres>=5.0",
]
mlflow = [
    "mlflow>=2.17",
]
mcp = [
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "locust>=2.29",
]
all = [
    "pubmed-ml-platform[mlflow,mcp,dev]",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# API and client modules are held to a stricter bar than the training CLIs.
module = ["src.serving.*", "src.ingestion.*", "src.mcp.*"]
check_untyped_defs = true

[[tool.mypy.overrides]]
# Training/experiment CLIs fight torch and sentence-transformers stubs
# (Tensor | Module unions, DataLoader generics) — not worth annotating.
module = [
    "src.embeddings.finetune",
    "src.embeddings.distill",
    "src.embeddings.cross_encoder",
    "src.embeddings.train_from_scratch",
    "src.embeddings.onnx_export",
]
ignore_errors = true
